# edgetx

./: .clang-tidy  .clangd  .cppcheck-suppressions  .cppcheck-suppressions.md  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  feedback.md  flake.nix  fw.json  opencode.json  pyproject.toml  requirements.txt  test_plan.md  tx16smk3-559197dfa.uf2
.beans/: battery-guard--voltage-driven-lipo-pack-confirmation-and-arming-guard.md  battery-guard-arming--block-arming-on-unconfirmed-battery-session.md  battery-guard-confirmation-baseline--apply-confirmed-pack-and-session-capacity-baseline.md  battery-guard-fix-alerts--wire-runtime-capacity-and-voltage-alerts.md  battery-guard-fix-arming-default--preserve-arming-when-no-battery-monitor-enabled.md  battery-guard-fix-battery-number-edit--make-cells-capacity-edits-predictable.md  battery-guard-fix-confirmation-validation--revalidate-pack-selection-against-current-voltage.md  battery-guard-fix-global-pack-ui-access--make-battery-packs-page-reachable.md  battery-guard-fix-lipo-boundaries--compare-total-voltage-ranges-without-floor-division.md  battery-guard-fix-manual-fallback--validate-manual-lipo-settings-without-voltage-match.md  battery-guard-fix-model-battery-menu--close-selector-and-show-monitor-choices.md  battery-guard-fix-preselection--auto-confirm-single-voltage-compatible-pack.md  battery-guard-fix-prompt-latch--respect-needs-confirmation-and-prompt-latch.md  battery-guard-fix-runtime-confirmed-slot--store-confirmed-slot-for-mismatch-detection.md  battery-guard-fix-source-empty-state--filter-empty-telemetry-source-state-by-unit.md  battery-guard-fix-storage-compat--load-existing-radio-settings-after-schema-change.md  battery-guard-fix-telemetry-source--correct-voltage-source-encoding-unit-validation-and-conversion.md  battery-guard-fix-ux-polish--make-battery-guard-flow-clear-and-pilot-friendly.md  battery-guard-model-ui--add-model-battery-status-and-compatible-packs.md  battery-guard-prompt-ui--add-voltage-compatible-pack-confirmation-dialog.md  battery-guard-qa-tx16s-e2e--verify-setup-confirmation-arming-alerts.md  battery-guard-radio-ui--add-radio-setup-lipo-pack-library.md  battery-guard-runtime--implement-voltage-driven-session-state.md  battery-guard-source-empty-state--show-empty-telemetry-source-message.md  battery-guard-storage--add-lipo-pack-library-and-model-compatibility-fields.md  battery-guard-verification--add-end-to-end-tests-and-run-supported-target-checks.md  battery-guard-voltage-policy--add-lipo-voltage-matching-helpers.md  perf-async-dma2d--make-dma2d-transfers-asynchronous-with-lvgl-wait-for-finish.md  perf-canvas-widgets--replace-line-arc-heavy-widgets-with-canvas-based-rendering.md  perf-color-editor-gradient--pre-render-color-editor-gradient-to-canvas.md  perf-monitor-debug--enable-lvgl-perf-monitor-in-debug-builds.md  perf-preload-fonts--pre-decompress-all-fonts-during-boot-splash.md  perf-remove-dead-gradient-code--remove-dead-lvgl-gradient-code-from-build.md  perf-rendering--optimize-lvgl-rendering-pipeline.md  ux-date-picker--replace-date-time-picker-with-wheel-spinner.md  ux-focused-dashboard--redesign-home-screen-with-focused-dashboard.md  ux-hit-targets--increase-hit-targets-to-48px-minimum.md  ux-keyboard-nodes--decompose-keyboard-into-per-key-ui-nodes.md  ux-model-context--show-model-context-on-manage-models-cards.md  ux-overhaul--apple-style-ux-overhaul-for-edge16.md  (+5 more)
.claude/: CLAUDE.md
.factory/droids/: edge16-serena.md  edge16-ui-harness.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/codeql/: edge16-firmware-safety.qls  edge16-firmware.yml
.github/workflows/: README.md  build_fw.yml  companion.yml  docs.yml  fork_tx16s_firmware.yml  nightly.yml  protocol_fuzz.yml  publish_tx16s_firmware.yml  release-drafter.yml  sync_repos.yml  validate_fw_json.yml  validate_hw_defs.yml
.semgrep/: edge16-firmware.yml
.serena/: project.yml
MODELS/: labels.yml  model1.yml
cmake/: NativeTargets.cmake  lvgl-edge16-safety.patch
companion/src/: companion.cpp  helpers.cpp
docs/building/: compilation-options.md  macos-sequoia.md
latest/: sitemap.xml
latest/search/: search_index.json
radio/: radio.yml
radio/src/: CMakeLists.txt  FreeRTOSConfig.h  audio.cpp  audio.h  battery_math.h  cli.cpp  curves.cpp  dataconstants.h  datastructs.h  datastructs_model.cpp  datastructs_private.h  datastructs_radio.cpp  debug.h  disk_cache.cpp  edgetx.cpp  edgetx.h  edgetx_helpers.h  functions.cpp  globals.h  gps.cpp  gps_nmea.cpp  gps_ubx.cpp  inactivity_timer.cpp  keys.cpp  keys.h  logs.cpp  main.cpp  mixer.cpp  mixer_scheduler.cpp  mixes.cpp  model_audio.cpp  rtc.cpp  rtc.h  rtos.c  strhelpers.cpp  switches.cpp  switches.h  tasks.cpp  tasks.h  timers.cpp  (+3 more)
radio/src/tests/: CMakeLists.txt  battery_math.cpp  battery_monitor.cpp  colorlcd_alerts.cpp  colorlcd_bitmapbuffer.cpp  colorlcd_button.cpp  colorlcd_choice.cpp  colorlcd_image_lifetime.cpp  colorlcd_layout.cpp  colorlcd_list_line_button.cpp  colorlcd_menu.cpp  colorlcd_model_select.cpp  colorlcd_model_telemetry.cpp  colorlcd_screen_setup.cpp  colorlcd_sliders.cpp  colorlcd_standalone_lua.cpp  colorlcd_startup_shutdown.cpp  colorlcd_static.cpp  colorlcd_window.cpp  crossfire.cpp  flysky.cpp  frsky.cpp  functions.cpp  ghost.cpp  gtests.h  hott.cpp  lua.cpp  mixer.cpp  mlink.cpp  model_audio.cpp  pulses.cpp  simu_ui_automation.cpp  spektrum.cpp  switches.cpp  timers.cpp  usb_driver.cpp  yaml.cpp
radio/src/tests/fuzz/: mixer_fuzzer.cpp  protocols.dict  protocols_fuzzer.cpp  yaml_parser_fuzzer.cpp
radio/util/: find_clang.py
tools/: build-common.sh  build-companion.sh  build-gh.sh  build-multilang.sh  build-wasm-modules.sh  check-repeated-if-invariants.py  check-safe-division.py  check-ui-escape-hatches.py  commit-tests.sh  edge16-cpp-lsp  edge16-serena-mcp  generate-hw-defs.sh  generate-yaml.sh  update-companion-translations.sh
tools/hil/: CONNECTIONS.md  README.md  edge16-hil
tools/ui-harness/: README.md  edgetx-mcp
{}/MODELS/: labels.yml
{}/RADIO/: radio.yml
(+470 files in other folders)
